--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 /*
+!visualization.ipynb
 !.gitignore
 !README.md
 !viewpoints/
 !env/
-!render_shapenet_demo/
 !render_seg/
-render_seg/*.log
 !render_image_kp/
-render_image_kp/*.log
