--- a/render_image_kp/config_aeroplane.ini
+++ b/render_image_kp/config_aeroplane.ini
@@ -1,8 +1,8 @@
 [Locations]
 model_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/models/airplane
 anno_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/keypoints/airplane
-img_savedir = /mnt/4TB_b/qing/3DComputerGraphicsPart/synthetic_images/aeroplane/image2
-anno_savedir = /mnt/4TB_b/qing/3DComputerGraphicsPart/synthetic_images/aeroplane/kp2
+img_savedir = ../demo/aeroplane/image
+anno_savedir = ../demo/aeroplane/kp
 texture_img_dir = /mnt/4TB_b/qing/dataset/COCO/train2017
 [Material]
 10e4331c34d610dacc14f1e6f4f4f49b = material_5_24,material_8_24,material_9_24,material_12_24,material_13_24,material_14_24,material_15_24,material_16_24,material_17_24,material_20_24,material_26_24,material_28_24,material_30_24,material_31_24
@@ -16,7 +16,7 @@ red = [1,0,0]
 green = [0,1,0]
 blue = [0,0,1]
 [Param]
-surface = random_color
+surface = plain
 [Keypoints]
 bomb_1_1
 bomb_1_2
