--- a/render_image_kp/config_bus.ini
+++ b/render_image_kp/config_bus.ini
@@ -1,14 +1,14 @@
 [Locations]
 model_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/models/bus
 anno_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/keypoints/bus
-img_savedir = /mnt/4TB_b/qing/3DComputerGraphicsPart/synthetic_images/bus/image
-anno_savedir = /mnt/4TB_b/qing/3DComputerGraphicsPart/synthetic_images/bus/kp
+img_savedir = ../demo/bus/image
+anno_savedir = ../demo/bus/kp
 texture_img_dir = /mnt/4TB_b/qing/dataset/COCO/train2017
 [Material]
-79e32e66bbf04191afe1d4530f4c6e24 = material_5_24
-4ead9b28515b97fdc0e2e9e9ade4d03b.json = material_0_24
-1821df0ce1bf2cea52470de2774d6099 = material_0_24
-3080d86e8424187d4d44f5db04bf14b8 = material_2_24
+79e32e66bbf04191afe1d4530f4c6e24 = material_1_24,material_2_24,material_8_24,material_9_24,material_10_24,material_14_24,material_22_24,material_26_24,material_40_24,material_41_24,material_50_24,material_52_4_8
+4ead9b28515b97fdc0e2e9e9ade4d03b = material_0_24,material_1_24,material_7_24,material_8_24,material_9_24,material_10_24,material_17_24,material_20_24,material_31_24
+1821df0ce1bf2cea52470de2774d6099 = material_0_24,material_5_24,material_7_24,material_8_24,material_11_24
+3080d86e8424187d4d44f5db04bf14b8 = material_0_24,material_1_24,material_9_24,material_38_24
 [Color]
 white = [1,1,1]
 black = [0,0,0]
@@ -16,7 +16,7 @@ red = [1,0,0]
 green = [0,1,0]
 blue = [0,0,1]
 [Param]
-surface = random_pic
+surface = plain
 [Keypoints]
 bumper_center_back
 bumper_center_front
