--- a/render_image_kp/config_car.ini
+++ b/render_image_kp/config_car.ini
@@ -1,8 +1,8 @@
 [Locations]
 model_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/models/car
 anno_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/keypoints/car
-img_savedir = /mnt/4TB_b/qing/3DComputerGraphicsPart/synthetic_images/car/image
-anno_savedir = /mnt/4TB_b/qing/3DComputerGraphicsPart/synthetic_images/car/kp
+img_savedir = ../demo/car/image
+anno_savedir = ../demo/car/kp
 texture_img_dir = /mnt/4TB_b/qing/dataset/COCO/train2017
 [Material]
 6710c87e34056a29aa69dfdc5532bb13 = material_2
@@ -18,7 +18,8 @@ red = [1,0,0]
 green = [0,1,0]
 blue = [0,0,1]
 [Param]
-surface = random_pic
+;['random_color', 'random_pic', 'plain', 'white', 'black', 'red', 'green', 'blue']
+surface = plain
 [Keypoints]
 center_back_bumper
 center_back_trunk
