--- a/render_image_kp/config_motorbike.ini
+++ b/render_image_kp/config_motorbike.ini
@@ -1,8 +1,8 @@
 [Locations]
 model_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/models/motorbike
 anno_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/keypoints/motorbike
-img_savedir = /mnt/4TB_b/qing/3DComputerGraphicsPart/synthetic_images/motorbike/image
-anno_savedir = /mnt/4TB_b/qing/3DComputerGraphicsPart/synthetic_images/motorbike/kp
+img_savedir = ../demo/motorbike/image
+anno_savedir = ../demo/motorbike/kp
 texture_img_dir = /mnt/4TB_b/qing/dataset/COCO/train2017
 [Material]
 6ea0a49bd27fa58b2279b76b11a9a16c = material_0_24,material_1_24,material_3_24,material_4_24,material_5_24
@@ -16,7 +16,8 @@ red = [1,0,0]
 green = [0,1,0]
 blue = [0,0,1]
 [Param]
-surface = random_pic
+;['random_color', 'random_pic', 'plain', 'white', 'black', 'red', 'green', 'blue']
+surface = plain
 [Keypoints]
 cover_back
 exhaust_left_1
