fix the data location

--- a/render_image_kp/config_aeroplane.ini
+++ b/render_image_kp/config_aeroplane.ini
@@ -1,9 +1,9 @@
 [Locations]
-model_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/models/airplane
-anno_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/keypoints/airplane
+model_dir = ../CGPart/models/airplane
+anno_dir = ../CGPart/keypoints/airplane
 img_savedir = ../demo/aeroplane/image
 anno_savedir = ../demo/aeroplane/kp
-texture_img_dir = /mnt/4TB_b/qing/dataset/COCO/train2017
+texture_img_dir = PATH_TO_COCO/COCO/train2017
 [Material]
 10e4331c34d610dacc14f1e6f4f4f49b = material_5_24,material_8_24,material_9_24,material_12_24,material_13_24,material_14_24,material_15_24,material_16_24,material_17_24,material_20_24,material_26_24,material_28_24,material_30_24,material_31_24
 5cf29113582e718171d03b466c72ce41 = material_0_24,material_1_24,material_2_24,material_4_24,material_8_24,material_9_24,material_10_24,material_11_24
@@ -16,6 +16,7 @@ red = [1,0,0]
 green = [0,1,0]
 blue = [0,0,1]
 [Param]
+;['random_color', 'random_pic', 'plain', 'white', 'black', 'red', 'green', 'blue']
 surface = plain
 [Keypoints]
 bomb_1_1
