--- a/render_image_kp/config_bicycle.ini
+++ b/render_image_kp/config_bicycle.ini
@@ -1,9 +1,9 @@
 [Locations]
-model_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/models/bicycle
-anno_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/keypoints/bicycle
+model_dir = ../CGPart/models/bicycle
+anno_dir = ../CGPart/keypoints/bicycle
 img_savedir = ../demo/bicycle/image
 anno_savedir = ../demo/bicycle/kp
-texture_img_dir = /mnt/4TB_b/qing/dataset/COCO/train2017
+texture_img_dir = PATH_TO_COCO/COCO/train2017
 [Material]
 42th1K3l6c = Archmodels55_3
 9i2YcKNJpi = default
@@ -16,6 +16,7 @@ red = [1,0,0]
 green = [0,1,0]
 blue = [0,0,1]
 [Param]
+;['random_color', 'random_pic', 'plain', 'white', 'black', 'red', 'green', 'blue']
 surface = plain
 [Keypoints]
 carrier_1
