--- a/render_image_kp/config_bus.ini
+++ b/render_image_kp/config_bus.ini
@@ -1,9 +1,9 @@
 [Locations]
-model_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/models/bus
-anno_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/keypoints/bus
+model_dir = ../CGPart/models/bus
+anno_dir = ../CGPart/keypoints/bus
 img_savedir = ../demo/bus/image
 anno_savedir = ../demo/bus/kp
-texture_img_dir = /mnt/4TB_b/qing/dataset/COCO/train2017
+texture_img_dir = PATH_TO_COCO/COCO/train2017
 [Material]
 79e32e66bbf04191afe1d4530f4c6e24 = material_1_24,material_2_24,material_8_24,material_9_24,material_10_24,material_14_24,material_22_24,material_26_24,material_40_24,material_41_24,material_50_24,material_52_4_8
 4ead9b28515b97fdc0e2e9e9ade4d03b = material_0_24,material_1_24,material_7_24,material_8_24,material_9_24,material_10_24,material_17_24,material_20_24,material_31_24
