--- a/render_image_kp/config_car.ini
+++ b/render_image_kp/config_car.ini
@@ -1,9 +1,9 @@
 [Locations]
-model_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/models/car
-anno_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/keypoints/car
+model_dir = ../CGPart/models/car
+anno_dir = ../CGPart/keypoints/car
 img_savedir = ../demo/car/image
 anno_savedir = ../demo/car/kp
-texture_img_dir = /mnt/4TB_b/qing/dataset/COCO/train2017
+texture_img_dir = PATH_TO_COCO/COCO/train2017
 [Material]
 6710c87e34056a29aa69dfdc5532bb13 = material_2
 42af1d5d3b2524003e241901f2025878 = material_1
