--- a/render_image_kp/config_motorbike.ini
+++ b/render_image_kp/config_motorbike.ini
@@ -1,9 +1,9 @@
 [Locations]
-model_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/models/motorbike
-anno_dir = /mnt/4TB_b/qing/3DComputerGraphicsPart/keypoints/motorbike
+model_dir = ../CGPart/models/motorbike
+anno_dir = ../CGPart/keypoints/motorbike
 img_savedir = ../demo/motorbike/image
 anno_savedir = ../demo/motorbike/kp
-texture_img_dir = /mnt/4TB_b/qing/dataset/COCO/train2017
+texture_img_dir = PATH_TO_COCO/COCO/train2017
 [Material]
 6ea0a49bd27fa58b2279b76b11a9a16c = material_0_24,material_1_24,material_3_24,material_4_24,material_5_24
 3837c8ef573c2a7b360cf6eb12fae4 = material_1_1_8,material_0_24,material_3_24,material_4_24,material_6_24,material_13_24,material_15_24,material_17_24
